--- a/web/views/pages/login.ejs
+++ b/web/views/pages/login.ejs
@@ -28,7 +28,7 @@
                                     <button class="btn btn-default btn-block" type="submit">Login</button>
                                 </form>
                             </div>
-                            <a href="#" class="text-center new-account">Create an account </a>
+                            <a href="/create_customer" class="text-center new-account">Create an account </a>
                         </div>
                     </div>
                 </div>
