--- a/web/views/partials/products_display.ejs
+++ b/web/views/partials/products_display.ejs
@@ -13,10 +13,24 @@
             <th>Quantity</th>
             <th></th>
         </tr>
+        <% prod_i = 0 %>
         <% products.forEach(function(product) { %>
             <tr>
                 <td><%= product.pname %></td>
-                <td><%= product.description %></td>
+                <td>
+                    <%= product.description %>
+                    <% if(product.ptype == 1 || product.ptype == 2){ %>
+                        <br>CPU Type: <%= product.cpu_type %>
+                    <% } %>
+                    <% if(product.ptype == 2){ %>
+                        <br>B Type: <%= product.btype %>
+                        <br>Weight: <%= product.weight %>
+                    <% } %>
+                    <% if(product.ptype == 3){ %>
+                        <br>B Type: <%= product.printer_type %>
+                        <br>Weight: <%= product.resolution %>
+                    <% } %>
+                </td>
                 <td>$<%= product.offer_price %></td>
                 <td><%= product.pquantity %></td>
                 <td>
@@ -29,10 +43,34 @@
                         <input type="text" class="form-control hidden" name="cid" value="<%= cid %>">
                         <input type="text" class="form-control hidden" name="pid" value="<%= product.pid %>">
                         <input type="text" class="form-control hidden" name="price" value="<%= product.offer_price %>">
-                        <button type="submit" class="btn btn-default pull-right">Add To Cart</button>
+
+                        <div class=pull-right>
+                            <div class="input-group">
+                                <span class="input-group-btn">
+                                    <button type="button" class="btn btn-default btn-pm-number" disabled="disabled" data-type="minus" data-field="quant[<%= prod_i %>]">
+                                        <span class="glyphicon glyphicon-minus"></span>
+                                    </button>
+                                </span>
+                                <input type="text" name="quantity_to_add" data-name="quant[<%= prod_i %>]" class="form-control input-pm-number" value="1" min="1" max="<%= product.pquantity %>">
+                                <span class="input-group-btn">
+                                    <button type="button" class="btn btn-default btn-pm-number" data-type="plus" data-field="quant[<%= prod_i %>]">
+                                        <span class="glyphicon glyphicon-plus"></span>
+                                    </button>
+                                </span>
+                            </div>
+                            <button type="submit" class="btn btn-default">Add To Cart</button>
+                        <div>
                     </form>
                 </td>
             </tr>
+            <% prod_i++ %>
         <% }); %>
     </table>
 </div>
+
+
+
+
+
+
+<script src="plusMinusInput.js"></script>
