Current state after presentation

--- a/web/views/partials/header.ejs
+++ b/web/views/partials/header.ejs
@@ -24,6 +24,7 @@
                       <ul class="dropdown-menu">
                         <li><a href="/account">Account</a></li>
                         <li><a href="/cart">Cart</a></li>
+                        <li><a href="/transactions_history">Transactions History</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="/logout">Logout</a></li>
                       </ul>
