--- a/web/views/partials/products_display.ejs
+++ b/web/views/partials/products_display.ejs
@@ -70,6 +70,11 @@
             <% prod_i++ %>
         <% }); %>
     </table>
+    <div class="pull-right">
+        <form class="" action="/add_product" method="GET">
+            <button class="btn btn-default btn-block btn-sm" type="submit">Add</button>
+        </form>
+    </div>
 </div>
 
 
